[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/FadeIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/ThaleahFat.tres" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Main Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -544.0
margin_top = -296.0
margin_right = 576.0
margin_bottom = 312.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Label" parent="Main Menu"]
margin_right = 1120.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 2 )
text = "OFFICE 
SCRAMBLE"
align = 1

[node name="Center Row" type="HBoxContainer" parent="Main Menu"]
margin_top = 243.0
margin_right = 1120.0
margin_bottom = 571.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Main Menu/Center Row"]
margin_right = 1120.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Start" type="Button" parent="Main Menu/Center Row/Buttons"]
margin_top = 30.0
margin_right = 1120.0
margin_bottom = 94.0
rect_min_size = Vector2( 64, 64 )
flat = true

[node name="Label" type="Label" parent="Main Menu/Center Row/Buttons/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Main Menu/Center Row/Buttons"]
margin_top = 98.0
margin_right = 1120.0
margin_bottom = 162.0
rect_min_size = Vector2( 64, 64 )
flat = true

[node name="Label" type="Label" parent="Main Menu/Center Row/Buttons/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="Main Menu/Center Row/Buttons"]
margin_top = 166.0
margin_right = 1120.0
margin_bottom = 230.0
rect_min_size = Vector2( 64, 64 )
flat = true

[node name="Label" type="Label" parent="Main Menu/Center Row/Buttons/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Main Menu/Center Row/Buttons"]
margin_top = 234.0
margin_right = 1120.0
margin_bottom = 298.0
rect_min_size = Vector2( 64, 64 )
flat = true

[node name="Label" type="Label" parent="Main Menu/Center Row/Buttons/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="Main Menu"]
margin_top = 575.0
margin_right = 1120.0
margin_bottom = 608.0
custom_fonts/font = SubResource( 4 )
text = "Version 1.0
Developed in Godot"
align = 2

[node name="FadeIn" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="pressed" from="Main Menu/Center Row/Buttons/Start" to="Main Menu" method="_on_Start_pressed"]
[connection signal="pressed" from="Main Menu/Center Row/Buttons/Settings" to="Main Menu" method="_on_Settings_pressed"]
[connection signal="pressed" from="Main Menu/Center Row/Buttons/Credits" to="Main Menu" method="_on_Credits_pressed"]
[connection signal="pressed" from="Main Menu/Center Row/Buttons/Exit" to="Main Menu" method="_on_Exit_pressed"]
